# roadmap_manager

./: .gitignore  PRESENTATION.md  README.md  VBA_code.bas  build_exe.bat  pyproject.toml  roadmap_cli.py
VBA/: VBA_code.bas  modButtonHandlers _old.bas  modButtonHandlers.bas  modFichierSyn.bas  modGestionInterfacse.bas  modGlobals.bas  modLC.bas  modSynthese.bas  modUtilities.bas  modVerifCollab.bas  old_btn.bas
roadmap/: __init__.py  helpers.py  main.py  roadmap.py
tests/: __init__.py  conftest.py  test_cli.py  test_helpers.py  test_main.py  test_roadmap_manager.py
