[project]
name = "roadmap"
version = "1.0.0"
description = "Automation tool for CE VHST Roadmap management. Streamlines time tracking export, conditional list updates, and Excel interface creation/deletion with VBA integration and parallel processing support."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Mustapha ELKAMILI"}
]
keywords = [
    "roadmap",
    "excel",
    "automation",
    "vba",
    "time-tracking",
    "xlwings",
    "openpyxl"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Utilities",
]

dependencies = [
    "openpyxl>=3.1.2",
    "pyinstaller>=6.17.0",
    "pywin32>=306",
    "tqdm>=4.67.1",
    "xlwings>=0.33.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
]

[project.scripts]
roadmap = "roadmap.main:run"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
